--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,12 +44,11 @@
         app:layout_constraintVertical_bias="0.696" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/menu_button"
         android:layout_width="36dp"
         android:layout_height="32dp"
         android:layout_marginTop="25dp"
         android:layout_marginEnd="44dp"
-        android:onClick="onClickMenu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_icons8_menu_100" />
