--- a/app/src/main/res/layout/activity_profile_view.xml
+++ b/app/src/main/res/layout/activity_profile_view.xml
@@ -8,76 +8,6 @@
     tools:context=".ProfileViewActivity">
 
 
-    <ImageView
-        android:id="@+id/imageView12"
-        android:layout_width="27dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="92dp"
-        android:layout_marginEnd="112dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView20"
-        app:srcCompat="@drawable/ic_baseline_search_35" />
-
-    <ImageView
-        android:id="@+id/imageView14"
-        android:layout_width="27dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="92dp"
-        android:layout_marginEnd="288dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView20"
-        app:srcCompat="@drawable/ic_baseline_search_35" />
-
-    <ImageView
-        android:id="@+id/imageView15"
-        android:layout_width="27dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="92dp"
-        android:layout_marginEnd="360dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView20"
-        app:srcCompat="@drawable/ic_baseline_home_35" />
-
-    <ImageView
-        android:id="@+id/imageView11"
-        android:layout_width="27dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="92dp"
-        android:layout_marginEnd="28dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView20"
-        app:srcCompat="@drawable/ic_baseline_person_35" />
-
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="35dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="52dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView19"
-        app:srcCompat="@drawable/ic_baseline_pie_chart_35" />
-
-    <ImageView
-        android:id="@+id/imageView9"
-        android:layout_width="35dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginEnd="52dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView20"
-        app:srcCompat="@drawable/ic_baseline_pie_chart_35" />
-
-    <ImageView
-        android:id="@+id/imageView10"
-        android:layout_width="35dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginEnd="52dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView20"
-        app:srcCompat="@drawable/ic_baseline_pie_chart_35" />
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -114,7 +44,7 @@
         app:layout_constraintVertical_bias="0.152" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/menu_button"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginStart="42dp"
@@ -131,7 +61,7 @@
         android:layout_marginBottom="1dp"
         android:text="Welcome back"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintStart_toEndOf="@+id/imageView" />
+        app:layout_constraintStart_toEndOf="@+id/menu_button" />
 
     <ImageView
         android:id="@+id/imageView5"
@@ -142,7 +72,7 @@
         android:layout_marginEnd="340dp"
         android:layout_marginBottom="54dp"
         android:onClick="onClickMenu2"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintBottom_toTopOf="@+id/menu_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -171,7 +101,7 @@
         android:textColor="@color/black"
         app:layout_constraintEnd_toStartOf="@+id/button1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/menu_button" />
 
     <Button
         android:id="@+id/button1"
@@ -302,140 +232,36 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="18dp"
         android:text="Continue Reading"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/imageView6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="54dp"
-        android:layout_height="77dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="5dp"
-        app:layout_constraintEnd_toStartOf="@+id/textView15"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView14"
-        app:srcCompat="@drawable/steve_job" />
-
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="54dp"
-        android:layout_height="77dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="18dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view"
-        app:srcCompat="@drawable/bill_gates" />
-
-    <TextView
-        android:id="@+id/textView17"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="34dp"
-        android:text="Die \n Veravandlung"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/imageView7"
-        app:layout_constraintTop_toBottomOf="@+id/view" />
-
-    <TextView
-        android:id="@+id/textView18"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:text="Franz Kafakka"
-        app:layout_constraintStart_toEndOf="@+id/imageView7"
-        app:layout_constraintTop_toBottomOf="@+id/textView17" />
-
-    <TextView
-        android:id="@+id/textView15"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="2dp"
-        android:text="The \n Goldfinch"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView16"
-        app:layout_constraintStart_toEndOf="@+id/imageView6"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
-
-    <TextView
-        android:id="@+id/textView16"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="2dp"
-        android:text="Donna tartt"
-        app:layout_constraintStart_toEndOf="@+id/imageView6"
-        app:layout_constraintTop_toBottomOf="@+id/textView15" />
-
-    <TextView
-        android:id="@+id/textView19"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="65dp"
-        android:layout_marginEnd="57dp"
-        android:text="62 %"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
-
-    <TextView
-        android:id="@+id/textView20"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="27dp"
-        android:layout_marginEnd="57dp"
-        android:text="48 %"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view" />
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="334dp"
-        android:layout_height="1dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="42dp"
-        android:background="@drawable/list_divider"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.571"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8" />
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="49dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="57dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="42dp"
-        android:layout_marginBottom="16dp"
-        app:cardBackgroundColor="#F1F1F0"
-        app:cardCornerRadius="10dp"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_nav_home"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:background="#F4F2EC"
+        app:elevation="8dp"
+        app:itemIconTint="@color/nav_item_state_list"
+        app:itemTextColor="#000000"
+        app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageView12"
-        app:layout_constraintStart_toEndOf="@+id/imageView14"
-        app:layout_constraintTop_toBottomOf="@+id/textView18">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/menu_navigation" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/imageView12"
-                android:layout_width="27dp"
-                android:layout_height="30dp"
-                android:layout_centerInParent="true"
-                app:srcCompat="@drawable/ic_baseline_book_35"
-                app:tint="#262222" />
-        </RelativeLayout>
-
-    </androidx.cardview.widget.CardView>
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/recycler_vieww"
+    android:layout_width="336dp"
+    android:layout_height="200dp"
+    android:layout_marginStart="39dp"
+    android:layout_marginTop="13dp"
+    android:layout_marginEnd="36dp"
+    android:layout_marginBottom="1dp"
+    app:layout_constraintBottom_toTopOf="@+id/bottom_nav_home"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/textView14"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
